--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,52 +12,63 @@
 
  :root {
   /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
+  --link-color: rgba(241 90 34 / 90%);
+  --link-hover-color: #124e57;
+  --button-color: #F37344;
   --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
-  --text-color: #000;
+  --text-color: #656262;
 
   /* fonts */
-  --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+  --bs-font-sans-serif: "Hero New", sans-serif;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-font-monospace: sfmono-regular,menlo,monaco,consolas,"Liberation Mono","Courier New",monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255 255 255 / 15%), rgba(255 255 255 / 0%));
+  --body-font-family: var(--bs-font-sans-serif);
+  --cards-font-size: 20px;
+  --cards-font-weight: 700;
+  --cards-font-color: var(--link-hover-color);
 
   /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
+  --body-font-size-m: 1rem;
+  --body-font-size-s: 0.75rem;
 
   /* heading sizes */
-  --heading-font-size-xxl: 48px;
-  --heading-font-size-xl: 40px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+  --heading-font-size-xxxl: 32px;
+  --heading-font-size-xxl: 26px;
+  --heading-font-size-xl: 22px;
+  --heading-font-size-l: 16px;
+  --heading-font-size-m: 14px;
+  --heading-font-size-s: 12px;
 
-  /* nav height */
-  --nav-height: 64px;
+  /* nav */
+  --nav-height: 80px;
+  --nav-background-color: rgb(18 78 87);
+  --nav-color: #fff;
+  --nav-active-color: #f37344;
 
-}
+  /* topbar */
+  --topbar-height: 20px;
+  --topbar-background-color: rgb(18 78 87);
+  --topbar-color: #fff;
+  --topbar-active-color: #f37344;
+  --topbar-border-color: #15808D;
 
-@media (min-width: 900px) {
-  :root {
-    --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: 48px;
-    --heading-font-size-l: 36px;
-    --heading-font-size-m: 30px;
-    --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;
-  }
+  /* footer */
+  --footer-color: #fff;
+  --footer-background-color: rgb(1 3 6);
 }
 
 body {
   font-size: var(--body-font-size-m);
   margin: 0;
   font-family: var(--body-font-family);
-  line-height: 1.6;
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
   color: var(--text-color);
   background-color: var(--background-color);
   display: none;
@@ -68,17 +79,19 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
+  height: calc(var(--nav-height) + var(--topbar-height) + 1 em);
+  background-color: var(--nav-background-color);
+  position: fixed;
+  width: 100vw;
 }
 
 h1, h2, h3,
 h4, h5, h6 {
-  font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
-  margin-top: 1em;
+  margin-top: .5em;
   margin-bottom: .5em;
-  scroll-margin: calc(var(--nav-height) + 1em);
+  scroll-margin: calc(var(--nav-height) + var(--topbar-height) + 1em);
 }
 
 h1 { font-size: var(--heading-font-size-xxl) }
@@ -88,16 +101,38 @@ h4 { font-size: var(--heading-font-size-m) }
 h5 { font-size: var(--heading-font-size-s) }
 h6 { font-size: var(--heading-font-size-xs) }
 
+.default-content-wrapper h1,
+.default-content-wrapper h2,
+.default-content-wrapper h3,
+.default-content-wrapper h4,
+.default-content-wrapper h5,
+.default-content-wrapper h6 {
+  text-align: center;
+}
+
+h1 > span.icon,
+h2 > span.icon,
+h3 > span.icon,
+h4 > span.icon,
+h5 > span.icon,
+h6 > span.icon {
+  display: inline;
+  margin-right: 10px;
+}
+
 p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-hr {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  border: 0;
-  border-bottom: 1px solid var(--overlay-background-color);
+a:any-link {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: var(--link-hover-color);
 }
 
 code, pre, samp {
@@ -113,27 +148,10 @@ pre {
   overflow: scroll;
 }
 
-main pre {
-  background-color: var(--overlay-background-color);
-  padding: 1em;
-  border-radius: .25em;
-  overflow-x: auto;
-  white-space: pre;
-}
-
-a:any-link {
-  color: var(--link-color);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-  color: var(--link-hover-color);
-}
-
 /* buttons */
+
 a.button:any-link, button {
-  font-family: var(--body-font-family);
+  font-family: var(--font-family-body);
   display: inline-block;
   box-sizing: border-box;
   text-decoration: none;
@@ -154,7 +172,23 @@ a.button:any-link, button {
 
 a.button:hover, a.button:focus, button:hover, button:focus  {
   background-color: var(--link-hover-color);
+  background-color: var(--button-color);
   cursor: pointer;
+}
+
+.modal a.button:any-link {
+  transition: 0.5s;
+  color: var(--button-color);
+  background: transparent;
+  border: 2px solid var(--button-color);
+}
+
+.modal a.button:hover {
+  background-color: var(--button-color);
+  color: var(--background-color);
+  text-decoration: none;
+  cursor: pointer;
+  text-decoration-style: solid;
 }
 
 button:disabled, button:disabled:hover {
@@ -167,6 +201,7 @@ a.button.secondary, button.secondary {
   border: 2px solid currentcolor;
   color: var(--text-color)
 }
+
 
 main input {
   font-size: 1.25rem;
@@ -186,6 +221,22 @@ main input:hover {
   border: 1px solid var(--text-color);
 }
 
+main .section {
+  padding: 32px;
+}
+
+main .section.grey {
+  background-color: var(--overlay-background-color);
+}
+
+main pre {
+  background-color: var(--overlay-background-color);
+  padding: 1em;
+  border-radius: .25em;
+  overflow-x: auto;
+  white-space: pre;
+}
+
 main blockquote {
   font-style: italic;
   margin: 3rem;
@@ -203,41 +254,55 @@ main blockquote p::after {
   line-height: 0;
 }
 
+hr {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  border: 0;
+  border-bottom: 1px solid var(--overlay-background-color);
+}
+
 main img {
   max-width: 100%;
-  width: auto;
   height: auto;
 }
 
-.icon {
-  display: inline-block;
-  height: 24px;
-  width: 24px;
-}
-
-.icon svg {
-  height: 100%;
-  width: 100%;
-}
-
-main .section {
-  padding: 64px 16px;
-}
-
-@media (min-width: 600px) {
-  main .section {
-    padding: 64px 32px;
-  }
-}
-
 @media (min-width: 900px) {
+  :root {
+    --heading-font-size-xxl: 40px;
+    --heading-font-size-xl: 32px;
+    --heading-font-size-l: 24px;
+    --heading-font-size-m: 20px;
+    --heading-font-size-s: 16px;
+    --heading-font-size-xs: 14px;
+  }
+
   .section > div {
-    max-width: 1200px;
+    max-width: 960px;
     margin: auto;
   }
 }
 
-/* section metadata */
+/* progressive section appearance */
+main .section[data-section-status='loading'],
+main .section[data-section-status='initialized'] {
+  display: none;
+}
+
 main .section.highlight {
   background-color: var(--highlight-background-color);
+}
+
+main .section-title h2 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    padding-bottom: 0;
+    font-family: "Hero New", sans-serif;
+    color: #635551;
+    text-align: center;
+}
+
+/* Anchors */
+#importantdecisions, #financialfuture, #faq, #memberbooklet, #finance {
+  scroll-margin-top: calc(var(--nav-height) + var(--topbar-height) + 1em);
 }
